testing/stage_20/invalid/empty_return_in_int_function.c
int test()
{
	return;
}

int main()
{
	int a=2+test()
	return a;
}